# gr-tempest

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.md  README.md  modes.txt
.conda/: README.md
.conda/recipe/: meta.yaml
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-tempestConfig.cmake  tempestConfig.cmake
docs/: CMakeLists.txt  README.tempest
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: EQtaps1080p.txt  FFT_autocorrelate.grc  FFT_crosscorrelate.grc  Halign_example.grc  Keep_1_in_N_frames.grc  automatic_tempest_example.grc  automatic_tempest_example_equalization_hd.grc  ecualizacion_record.grc  fftest.grc  gr_tempest_v2-0-0_HDMI_fs_50MHz_fc_148-5MHz.grc  gr_tempest_v2-0-0_HDMI_fs_50MHz_fc_300MHz.grc  gr_tempest_v2-0-0_InferScreenResolution_fs_50MHz_fc_300MHz.grc  gr_tempest_v2-0-0_VGA_fs_50MHz_fc_300MHz.grc  gr_tempest_v2-0-0_VGA_fs_50MHz_fc_300MHz_TakesRealPartOutput.grc  infer_screen_example.grc  manual_simulated_tempest_example.grc  manual_tempest_example.grc  manual_tempest_example_FFT_peaks_hd.grc  manual_tempest_example_FFT_peaks_hd_and_EQ.grc  manual_tempest_example_HDMI_Real_and_CentralFreqCorrection.grc  manual_tempest_hdmi_example.grc  msg_btn_example.grc  msgbtnTest.grc  semi_automatic_tempest_example.grc  semi_automatic_tempest_example_usrp.grc  semi_automatic_tempest_hdmi_example.grc  synchronization_example.grc  test_crosscorrelate.grc  test_crosscorrelate_manual_example.grc
examples/Demo/: HDMI_50MHzSps_1485MHzCentral_Magnitude.grc  VGA_50MHzSps_300MHzCentral_Magnitude.grc  VGA_50MHzSps_300MHzCentral_Real.grc  autoespia.grc  manual_tempest_example.py
grc/: CMakeLists.txt  tempest_Hsync.block.yml  tempest_Hsync.xml  tempest_Vsync.xml  tempest_fft_peak_fine_sampling_sync.block.yml  tempest_fine_sampling_synchronization.block.yml  tempest_fine_sampling_synchronization.xml  tempest_frame_drop.block.yml  tempest_framing.block.yml  tempest_framing.xml  tempest_image_source.block.yml  tempest_image_source.xml  tempest_infer_resolution.block.yml  tempest_infer_screen_resolution.block.yml  tempest_message_to_var.block.yml  tempest_normalize_flow.block.yml  tempest_normalize_flow.xml  tempest_sampling_synchronization.block.yml  tempest_sampling_synchronization.xml  tempest_ssamp_correction.block.yml  tempest_sync_detector.block.yml  tempest_tempest_msgbtn.block.yml
include/gnuradio/tempest/: CMakeLists.txt  Hsync.h  api.h  fft_peak_fine_sampling_sync.h  fine_sampling_synchronization.h  frame_drop.h  framing.h  infer_screen_resolution.h  normalize_flow.h  sampling_synchronization.h  ssamp_correction.h  sync_detector.h
include/tempest/: CMakeLists.txt  Hsync.h  Vsync.h  api.h  fft_peak_fine_sampling_sync.h  fine_sampling_synchronization.h  frame_drop.h  framing.h  infer_resolution.h  infer_screen_resolution.h  normalize_flow.h  sampling_synchronization.h  ssamp_correction.h  sync_detector.h
lib/: CMakeLists.txt  Hsync_impl.cc  Hsync_impl.h  Vsync_impl.cc  Vsync_impl.h  fft_peak_fine_sampling_sync_impl.cc  fft_peak_fine_sampling_sync_impl.h  fine_sampling_synchronization_impl.cc  fine_sampling_synchronization_impl.h  frame_drop_impl.cc  frame_drop_impl.h  framing_impl.cc  framing_impl.h  infer_resolution_impl.cc  infer_resolution_impl.h  infer_screen_resolution_impl.cc  infer_screen_resolution_impl.h  ncaso.txt  normalize_flow_impl.cc  normalize_flow_impl.h  qa_tempest.cc  qa_tempest.h  sampling_synchronization_impl.cc  sampling_synchronization_impl.h  ssamp_correction_impl.cc  ssamp_correction_impl.h  sync_detector_impl.cc  sync_detector_impl.h  test_tempest.cc
python/: CMakeLists.txt  __init__.py  image_source.py  qa_Hsync.py  qa_Vsync.py  qa_fft_peak_fine_sampling_sync.py  qa_fine_sampling_synchronization.py  qa_frame_drop.py  qa_framing.py  qa_image_source.py  qa_infer_resolution.py  qa_infer_screen_resolution.py  qa_normalize_flow.py  qa_sampling_synchronization.py  qa_ssamp_correction.py  qa_sync_detector.py  qa_tempest_msgbtn.py
python/tempest/: CMakeLists.txt  __init__.py  message_to_var.py  qa_Hsync.py  qa_fft_peak_fine_sampling_sync.py  qa_fine_sampling_synchronization.py  qa_frame_drop.py  qa_framing.py  qa_image_source.py  qa_infer_screen_resolution.py  qa_message_to_var.py  qa_normalize_flow.py  qa_sampling_synchronization.py  qa_ssamp_correction.py  qa_sync_detector.py  qa_tempest_msgbtn.py  tempest_msgbtn.py
python/tempest/bindings/: CMakeLists.txt  Hsync_python.cc  failed_conversions.txt  fft_peak_fine_sampling_sync_python.cc  fine_sampling_synchronization_python.cc  frame_drop_python.cc  framing_python.cc  infer_screen_resolution_python.cc  normalize_flow_python.cc  python_bindings.cc  sampling_synchronization_python.cc  ssamp_correction_python.cc  sync_detector_python.cc
python/tempest/bindings/docstrings/: Hsync_pydoc_template.h  fft_peak_fine_sampling_sync_pydoc_template.h  fine_sampling_synchronization_pydoc_template.h  frame_drop_pydoc_template.h  framing_pydoc_template.h  infer_screen_resolution_pydoc_template.h  normalize_flow_pydoc_template.h  sampling_synchronization_pydoc_template.h  ssamp_correction_pydoc_template.h  sync_detector_pydoc_template.h
swig/: CMakeLists.txt  tempest_swig.i
